# ShallahJapprendsUnjour

./: CMakeLists.txt  README.md
include/: camera.hpp  config.hpp  engine.hpp  model_loader.hpp  read_file.hpp  shader.hpp  shader_loader.hpp  window_manager.hpp
include/glad/: gl.hpp
models/: kar98k.mtl
shaders/: fragment.glsl  vertex.glsl
src/: gl.cpp  main.cpp  model_loader.cpp  read_file.cpp  shader.cpp  shader_loader.cpp  vendors.cpp  window_manager.cpp
